fixed bg on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
-body, html  {
+html  {
   background-image: url('https://static.pexels.com/photos/414171/pexels-photo-414171.jpeg');
   background-position: center;
   background-repeat: no-repeat;
